refactor(mail): move MailService logic to separate module and refactoring auth module