@@ -13,48 +13,49 @@ import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
-import ru.mashnin.exception.JwtAuthenticationException;
 import ru.mashnin.service.JwtService;
-import ru.mashnin.service.UserService;
 
 import java.io.IOException;
-import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
 @Slf4j
 public class JwtRequestFilter extends OncePerRequestFilter {
-    private final UserService userService;
+
     private final JwtService jwtService;
 
     @Override
-    protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain filterChain) throws ServletException, IOException {
+    protected void doFilterInternal(HttpServletRequest request,
+                                    HttpServletResponse response,
+                                    FilterChain filterChain) throws ServletException, IOException {
         String authHeader = request.getHeader("Authorization");
-        String username = null;
-        String jwt = null;
-        if (authHeader != null && authHeader.startsWith("Bearer ")) {
-            jwt = authHeader.substring(7);
-            try {
-                username = jwtService.getUsername(jwt);
-            } catch (ExpiredJwtException e) {
-                log.info("Время жизни токена вышло");
-            } catch (SignatureException e) {
-                log.info("Подпись неправильная");
-            } catch (Exception e) {
-                log.info("Ошибка при парсинге токена");
-            }
+        if (authHeader == null || !authHeader.startsWith("Bearer ")) {
+            filterChain.doFilter(request, response);
+            return;
         }
+
+        String username = null;
+        String jwt = authHeader.substring(7);
+        try {
+            username = jwtService.getUsername(jwt);
+        } catch (ExpiredJwtException e) {
+            log.info("Время жизни токена вышло");
+        } catch (SignatureException e) {
+            log.info("Подпись неправильная");
+        } catch (Exception e) {
+            log.info("Ошибка при парсинге токена");
+        }
+
         if (username != null && SecurityContextHolder.getContext().getAuthentication() == null) {
-            if (!userService.existsUserByEmail(username)) {
-                log.error("Не существует пользователя с email: '{}', которому принадлежит данный токен", username);
-                throw new JwtAuthenticationException("Пользователь, которому принадлежит токен, не найден");
-            }
-            UsernamePasswordAuthenticationToken token = new UsernamePasswordAuthenticationToken(
-                    username,
-                    null,
-                    jwtService.getRoles(jwt).stream().map(SimpleGrantedAuthority::new).collect(Collectors.toList())
-            );
-            SecurityContextHolder.getContext().setAuthentication(token);
+
+            var authorities = jwtService.getRoles(jwt).stream()
+                    .map(r -> new SimpleGrantedAuthority("ROLE_" + r))
+                    .toList();
+
+            UsernamePasswordAuthenticationToken authToken =
+                    new UsernamePasswordAuthenticationToken(username, null, authorities);
+
+            SecurityContextHolder.getContext().setAuthentication(authToken);
         }
         filterChain.doFilter(request, response);
     }
